--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-OPENAI_API_KEY=******
+# Flask基础配置
+FLASK_DEBUG=1
+FLASK_ENV=development
+
+# wtf配置
+WTF_CSRF_ENABLED=False
+
+# SQLAlchemy数据库配置
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:root@127.0.0.1:5432/llm-ops?client_encoding=utf8
+SQLALCHEMY_POOL_SIZE=30
+SQLALCHEMY_POOL_RECYCLE=3600
+SQLALCHEMY_ECHO=True
+
+# OpenAI服务提供者
+OPENAI_API_KEY=
